--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\excelfiles\ExcelFile1.xlsx" />
+    <None Include="wwwroot\excelfiles\translate.txt" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Plugins.DataStore.InMemory\Plugins.DataStore.InMemory.csproj" />
