Go to PC. Add Radzen In Project.

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Radzen.Blazor" Version="3.14.7" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Plugins.DataStore.InMemory\Plugins.DataStore.InMemory.csproj" />
     <ProjectReference Include="..\UseCases\UseCases.csproj" />
   </ItemGroup>
