--- a/WebOptixSuccess/WebOptixSuccess.csproj
+++ b/WebOptixSuccess/WebOptixSuccess.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="Pages\Customer\VeiwCustomersComponent.razor" />
+    <Content Include="Pages\Customer\Customers.razor" />
   </ItemGroup>
 
   <ItemGroup>
