--- a/OptixSuccess.Services/OptixSuccess.Services.csproj
+++ b/OptixSuccess.Services/OptixSuccess.Services.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ClosedXML" Version="0.95.4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\CoreBusiness\CoreBusiness.csproj" />
+    <PackageReference Include="EPPlus" Version="5.8.6" />
   </ItemGroup>
 
 </Project>
