--- a/WebOptixSuccess/WebOptixSuccess.csproj
+++ b/WebOptixSuccess/WebOptixSuccess.csproj
@@ -38,6 +38,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.95.4" />
+    <PackageReference Include="EPPlus" Version="5.8.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.1">
@@ -49,15 +51,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CoreBusiness\CoreBusiness.csproj" />
-    <ProjectReference Include="..\OptixSuccess.Services\OptixSuccess.Services.csproj" />
     <ProjectReference Include="..\Plugins.DataStore.InMemory\Plugins.DataStore.InMemory.csproj" />
     <ProjectReference Include="..\Plugins.DataStore.SQL\Plugins.DataStore.SQL.csproj" />
-    <ProjectReference Include="..\Plugins.OsExcel\Plugins.OsExcel.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Development\unsafe_uploads\" />
     <Folder Include="unsafe_uploads\" />
+    <Folder Include="wwwroot\files\" />
   </ItemGroup>
 
 </Project>
