--- a/WebOptixSuccess/WebOptixSuccess.csproj
+++ b/WebOptixSuccess/WebOptixSuccess.csproj
@@ -7,22 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Pages\Customer\**" />
+    <Compile Remove="Pages\Customers\**" />
     <Compile Remove="Pages\ItemOrder\**" />
     <Compile Remove="Pages\OrderCustomer\**" />
     <Compile Remove="Pages\OrderVendor\**" />
     <Compile Remove="Pages\Vendor\**" />
-    <Content Remove="Pages\Customer\**" />
+    <Content Remove="Pages\Customers\**" />
     <Content Remove="Pages\ItemOrder\**" />
     <Content Remove="Pages\OrderCustomer\**" />
     <Content Remove="Pages\OrderVendor\**" />
     <Content Remove="Pages\Vendor\**" />
-    <EmbeddedResource Remove="Pages\Customer\**" />
+    <EmbeddedResource Remove="Pages\Customers\**" />
     <EmbeddedResource Remove="Pages\ItemOrder\**" />
     <EmbeddedResource Remove="Pages\OrderCustomer\**" />
     <EmbeddedResource Remove="Pages\OrderVendor\**" />
     <EmbeddedResource Remove="Pages\Vendor\**" />
-    <None Remove="Pages\Customer\**" />
+    <None Remove="Pages\Customers\**" />
     <None Remove="Pages\ItemOrder\**" />
     <None Remove="Pages\OrderCustomer\**" />
     <None Remove="Pages\OrderVendor\**" />
@@ -34,7 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Pages\Customer\Customers.razor" />
+    <Content Include="Pages\Customers\Customers.razor" />
   </ItemGroup>
 
   <ItemGroup>
