--- a/WebOptixSuccessAuth/appsettings.json
+++ b/WebOptixSuccessAuth/appsettings.json
@@ -1,9 +1,13 @@
 {
   "ConnectionStrings": {
-    "ConnectionAuth":         "Data Source=pc-631\\sqlexpress;Initial Catalog=WebOptixSuccessAuth;Integrated Security=True;Pooling=False",
-    "ConnectionOptixSuccess": "Data Source=PC-631\\SQLEXPRESS;Initial Catalog=WebOptixSuccessAuth;Integrated Security=True;Pooling=False",
-    "DefaultConnection":      "Data Source=pc-631\\sqlexpress;Initial Catalog=WebOptixSuccessAuth;Integrated Security=True;Pooling=False",
-    "DefaultConnectionOld":   "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebOptixSuccessAuth-94FF25FF-6337-40D1-A80D-EBCD47DBAB3E;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ConnectionAuth-PC": "Data Source=pc-631\\sqlexpress;Initial Catalog=WebOptixSuccessAuth;Integrated Security=True;Pooling=False",
+    "ConnectionOptixSuccess-PC": "Data Source=PC-631\\SQLEXPRESS;Initial Catalog=WebOptixSuccessAuth;Integrated Security=True;Pooling=False",
+
+    "ConnectionAuth-laptop": "Data Source=motiv-laptop\\sqlexpress;Initial Catalog=WebOptixSuccessAuth;Integrated Security=True;Pooling=False",
+    "ConnectionOptixSuccess-laptop": "Data Source=motiv-laptop\\sqlexpress;Initial Catalog=WebOptixSuccessAuth;Integrated Security=True;Pooling=False",
+
+    "DefaultConnection": "Data Source=pc-631\\sqlexpress;Initial Catalog=WebOptixSuccessAuth;Integrated Security=True;Pooling=False",
+    "DefaultConnectionOld": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebOptixSuccessAuth-94FF25FF-6337-40D1-A80D-EBCD47DBAB3E;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
