Change ConnectionSring for pc-631

--- a/WebOptixSuccessAuth/appsettings.json
+++ b/WebOptixSuccessAuth/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "ConnectionAuth-PC": "Data Source=pc-631\\sqlexpress;Initial Catalog=WebOptixSuccessAuth;Integrated Security=True;Pooling=False",
-    "ConnectionOptixSuccess-PC": "Data Source=PC-631\\SQLEXPRESS;Initial Catalog=WebOptixSuccessAuth;Integrated Security=True;Pooling=False",
+    "ConnectionAuth-pc": "Data Source=pc-631\\sqlexpress;Initial Catalog=WebOptixSuccessAuth;Integrated Security=True;Pooling=False",
+    "ConnectionOptixSuccess-pc": "Data Source=PC-631\\SQLEXPRESS;Initial Catalog=WebOptixSuccessAuth;Integrated Security=True;Pooling=False",
 
     "ConnectionAuth-laptop": "Data Source=motiv-laptop\\sqlexpress;Initial Catalog=WebOptixSuccessAuth;Integrated Security=True;Pooling=False",
     "ConnectionOptixSuccess-laptop": "Data Source=motiv-laptop\\sqlexpress;Initial Catalog=WebOptixSuccessAuth;Integrated Security=True;Pooling=False",
